[gd_scene load_steps=9 format=4 uid="uid://cqltd7q8vheaq"]

[ext_resource type="Script" uid="uid://ba6hjx51uv733" path="res://scripts/GameLogic.gd" id="1_54t4e"]
[ext_resource type="Texture2D" uid="uid://c02hp2cixx461" path="res://art/lumines_tiles.png" id="1_kny2m"]
[ext_resource type="Script" uid="uid://rr8l55micrpu" path="res://scripts/ActivePiece.gd" id="2_empnm"]
[ext_resource type="Script" uid="uid://bk7msmtw2ns4h" path="res://scripts/BoardUpdate.gd" id="2_fiega"]
[ext_resource type="Script" uid="uid://boluwdwuuh54n" path="res://scripts/ClearingLine.gd" id="3_xbdd4"]
[ext_resource type="Texture2D" uid="uid://bj2t5saxryng3" path="res://art/test_textures/poisebois_level1.png" id="6_pn7l4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0csep"]
texture = ExtResource("1_kny2m")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0

[sub_resource type="TileSet" id="TileSet_nk1ti"]
tile_size = Vector2i(64, 64)
sources/1 = SubResource("TileSetAtlasSource_0csep")

[node name="Game" type="Node2D"]
script = ExtResource("1_54t4e")

[node name="Board" type="TileMap" parent="."]
tile_set = SubResource("TileSet_nk1ti")
format = 2
script = ExtResource("2_fiega")

[node name="CurrentLevel" type="RichTextLabel" parent="Board"]
offset_left = 1026.0
offset_top = 835.0
offset_right = 1096.0
offset_bottom = 888.0
text = "Level: 1"

[node name="BackgroundTexture" type="TextureRect" parent="Board"]
z_index = -1
z_as_relative = false
texture_filter = 1
offset_left = -34.0
offset_top = -37.0
offset_right = 1187.0
offset_bottom = 963.0
texture = ExtResource("6_pn7l4")

[node name="background" type="TileMapLayer" parent="Board"]
use_parent_material = true
tile_map_data = PackedByteArray("AAABAAMAAQAAAAAAAAABAAQAAQAAAAAAAAABAAYAAQAAAAAAAAABAAUAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAABAAkAAQAAAAAAAAABAAoAAQAAAAAAAAABAAsAAQAAAAAAAAABAAwAAQAAAAAAAAACAAwAAQAAAAAAAAADAAwAAQAAAAAAAAAFAAwAAQAAAAAAAAAEAAwAAQAAAAAAAAAGAAwAAQAAAAAAAAAHAAwAAQAAAAAAAAAIAAwAAQAAAAAAAAAJAAwAAQAAAAAAAAAKAAwAAQAAAAAAAAALAAwAAQAAAAAAAAAMAAwAAQAAAAAAAAANAAwAAQAAAAAAAAAOAAwAAQAAAAAAAAAPAAwAAQAAAAAAAAAQAAwAAQAAAAAAAAAQAAsAAQAAAAAAAAAQAAoAAQAAAAAAAAAQAAkAAQAAAAAAAAAQAAgAAQAAAAAAAAAQAAcAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAUAAQAAAAAAAAAQAAQAAQAAAAAAAAAQAAMAAQAAAAAAAAAPAAMAAQAAAAAAAAAOAAMAAQAAAAAAAAANAAMAAQAAAAAAAAAMAAMAAQAAAAAAAAALAAMAAQAAAAAAAAAKAAMAAQAAAAAAAAAJAAMAAQAAAAAAAAAIAAMAAQAAAAAAAAAHAAMAAQAAAAAAAAAGAAMAAQAAAAAAAAAFAAMAAQAAAAAAAAAEAAMAAQAAAAAAAAADAAMAAQAAAAAAAAACAAMAAQAAAAAAAAADAAYAAQAAAAAAAAADAAUAAQAAAAAAAAADAAQAAQAAAAAAAAACAAQAAQAAAAAAAAACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAACAAcAAQAAAAAAAAACAAgAAQAAAAAAAAACAAkAAQAAAAAAAAACAAoAAQAAAAAAAAACAAsAAQAAAAAAAAADAAsAAQAAAAAAAAADAAoAAQAAAAAAAAADAAkAAQAAAAAAAAADAAcAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAQAAQAAAAAAAAAFAAQAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAoAAQAAAAAAAAAEAAsAAQAAAAAAAAAFAAsAAQAAAAAAAAAFAAoAAQAAAAAAAAAFAAkAAQAAAAAAAAAGAAkAAQAAAAAAAAAGAAgAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAQAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAgAAQAAAAAAAAAHAAkAAQAAAAAAAAAHAAoAAQAAAAAAAAAGAAoAAQAAAAAAAAAGAAsAAQAAAAAAAAAHAAsAAQAAAAAAAAAIAAsAAQAAAAAAAAAIAAoAAQAAAAAAAAAIAAkAAQAAAAAAAAAIAAgAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAYAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAQAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAAAAAAJAAkAAQAAAAAAAAAJAAoAAQAAAAAAAAAJAAsAAQAAAAAAAAAKAAsAAQAAAAAAAAAKAAoAAQAAAAAAAAAKAAkAAQAAAAAAAAAKAAgAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAQAAQAAAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAALAAcAAQAAAAAAAAALAAgAAQAAAAAAAAALAAkAAQAAAAAAAAALAAoAAQAAAAAAAAALAAsAAQAAAAAAAAAMAAsAAQAAAAAAAAAMAAoAAQAAAAAAAAAMAAkAAQAAAAAAAAAMAAgAAQAAAAAAAAAMAAcAAQAAAAAAAAAMAAYAAQAAAAAAAAAMAAUAAQAAAAAAAAAMAAQAAQAAAAAAAAANAAQAAQAAAAAAAAANAAUAAQAAAAAAAAANAAYAAQAAAAAAAAANAAcAAQAAAAAAAAANAAgAAQAAAAAAAAANAAkAAQAAAAAAAAANAAoAAQAAAAAAAAANAAsAAQAAAAAAAAAOAAsAAQAAAAAAAAAOAAoAAQAAAAAAAAAOAAkAAQAAAAAAAAAOAAgAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAYAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAQAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAUAAQAAAAAAAAAPAAYAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAgAAQAAAAAAAAAPAAkAAQAAAAAAAAAPAAoAAQAAAAAAAAAPAAsAAQAAAAAAAAADAAgAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_nk1ti")

[node name="ActivePiece" type="Sprite2D" parent="."]
script = ExtResource("2_empnm")

[node name="RotateLeft" type="AudioStreamPlayer" parent="ActivePiece"]

[node name="RotateRight" type="AudioStreamPlayer" parent="ActivePiece"]

[node name="LandBlock" type="AudioStreamPlayer" parent="ActivePiece"]

[node name="ClearingLine" type="Line2D" parent="."]
z_index = 2
default_color = Color(0.849353, 0.397035, 0.21179, 1)
script = ExtResource("3_xbdd4")

[node name="BGM" type="AudioStreamPlayer" parent="."]

[node name="Debug" type="Node" parent="."]

[node name="DebugClearingLineCellX" type="RichTextLabel" parent="Debug"]
visible = false
z_index = 2
offset_right = 40.0
offset_bottom = 40.0

[node name="DebugFPSCounter" type="RichTextLabel" parent="Debug"]
visible = false
offset_left = 1113.0
offset_right = 1153.0
offset_bottom = 40.0

[node name="DebugDisplay" type="RichTextLabel" parent="Debug"]
visible = false
offset_left = 699.0
offset_top = 2.0
offset_right = 1147.0
offset_bottom = 174.0

[node name="DebugPauseClearLine" type="CheckBox" parent="Debug"]
visible = false
offset_right = 179.0
offset_bottom = 31.0
focus_mode = 0
text = "Pause Clearing Line"

[node name="DebugLineSpeedMod" type="HSlider" parent="Debug"]
visible = false
offset_left = 68.0
offset_top = 79.0
offset_right = 378.0
offset_bottom = 172.0
tooltip_text = "Clearing Line Speed Mod"
focus_mode = 0
min_value = 1.0
max_value = 10.0
value = 1.0
scrollable = false
tick_count = 10
ticks_on_borders = true

[node name="UI" type="Node2D" parent="."]

[node name="GameOverText" type="RichTextLabel" parent="UI"]
visible = false
z_index = 2
offset_left = 210.0
offset_top = 396.0
offset_right = 1036.0
offset_bottom = 892.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/normal_font_size = 128
text = "GAME OVER"

[node name="YouWinText" type="RichTextLabel" parent="UI"]
visible = false
z_index = 2
offset_left = 294.0
offset_top = 397.0
offset_right = 877.0
offset_bottom = 557.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/normal_font_size = 128
text = "YOU WIN"

[node name="RetryButton" type="Button" parent="UI"]
visible = false
z_index = 2
z_as_relative = false
offset_left = 319.0
offset_top = 558.0
offset_right = 855.0
offset_bottom = 676.0
theme_override_font_sizes/font_size = 36
text = "RETRY?"

[node name="QuitToFrontEnd" type="Button" parent="UI"]
offset_left = 1062.0
offset_top = 9.0
offset_right = 1142.0
offset_bottom = 61.0
text = "Quit"
metadata/_edit_use_anchors_ = true
